<resources>
    <string name="app_name">Pizzeria Juanito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pizzer_a_juanito">Pizzería Juanito</string>
    <string name="nombre">Nombre</string>
    <string name="peque_a_1500">Pequeña $1500</string>
    <string name="mediana_3000">Mediana $3000</string>
    <string name="familiar_5000">Familiar $5000</string>
    <string name="carne_400">Carne $400</string>
    <string name="tocino_450">Tocino $450</string>
    <string name="pepperoni_200">Pepperoni $200</string>
    <string name="champi_on_250">Champiñon $250</string>
    <string name="tomate_200">Tomate $200</string>
    <string name="choclo_200">Choclo $200</string>
    <string name="aceituna_250">Aceituna $250</string>
    <string name="aceptar">Aceptar</string>
    <string name="cliente">Cliente:</string>
    <string name="total">Total:</string>
</resources>