<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PedidoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D9154">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:foregroundGravity="center"
            app:cardBackgroundColor="#81756D6D"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.002">

            <TextView
                android:id="@+id/tvPizzeria"
                android:layout_width="323dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:fontFamily="@font/italiana"
                android:gravity="center"
                android:text="@string/pizzer_a_juanito"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#81756D6D"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.052">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:fontFamily="@font/italiana"
                android:gravity="center"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textSize="24sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#81756D6D"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.01999998">

            <RadioGroup
                android:id="@+id/rgTamanios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbPequenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/peque_a_1500"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbMediana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/mediana_3000"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbFamiliar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/familiar_5000"
                    android:textStyle="bold" />
            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#81756D6D"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            app:layout_constraintVertical_bias="0.17000002">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cbCarne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/carne_400"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cbPepperoni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/pepperoni_200"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cbTocino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/tocino_450"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cbChampignon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/champi_on_250"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cbTomate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/tomate_200"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cbChoclo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/choclo_200"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cbAceituna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/aceituna_250"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/italiana"
            android:text="@string/aceptar"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>